# Hero1-Reach

./: README.md  package.json
backend/: pyproject.toml
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: base.py  base_class.py  init_db.py  redis.py  security.py  session.py
backend/app/models/: project.py  user.py  workspace.py
pages/: index.jsx
